<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>leo_nav</name>
  <version>1.1.0</version>
  <description>
    This package provides navigation capabilities for Leo
  </description>

  <maintainer email="support@fictionlab.pl">Fictionlab</maintainer>
  
  <license>MIT</license>

  <author email="janek@fictionlab.pl">Jan Hernas</author>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <!--TODO: update dependencies-->
  <exec_depend>nav2_planner</exec_depend>
  <exec_depend>nav2_controller</exec_depend>
  <exec_depend>nav2_lifecycle_manager</exec_depend>
  <exec_depend>nav2_navfn_planner</exec_depend>
  <exec_depend>nav2_waypoint_follower</exec_depend>
  <exec_depend>nav2_bt_navigator</exec_depend>
  <exec_depend>nav2_dwb_controller</exec_depend>
  <exec_depend>robot_localization</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <architecture_independent/>
  </export>

</package>